<resources>
    <string name="app_name">Homework07_(PartA)</string>
    <string name="signUpText">Dont have any account?</string>
    <string name="SignUp"><u>SignUp</u></string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_Image">Select Image</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Create_New_Trip">Create New Trip</string>
    <string name="First_Name">First Name:</string>
    <string name="Last_Name">Last Name:</string>
    <string name="Save">Save</string>
    <string name="Title">Title</string>
    <string name="Location">Location</string>
    <string name="ADD_TRIP">ADD TRIP</string>
    <string name="title_activity_create_trip_map">Create a Trip</string>
    <string name="Check">Check</string>
    <string name="Cancel">Cancel</string>
    <string name="Go_to_Trip_Chat">Chat</string>
    <string name="Add_User">Add User</string>
    <string name="Place">Place</string>
    <string name="Created_By">Created By</string>
    <string name="Join">Join</string>
    <string name="RemoveTrip">Remove Trip</string>


    <string name="user">Logged User</string>
    <string name="input">Type message to send...</string>
    <string name="Users">Users</string>

</resources>
